Bug fixing for Android Build version 3.0.50.0 and releasing Build Version 3.0.51.0 pointing to the Staging Server.

--- a/MaxisGetIt/res/layout/activity_view_deal_map.xml
+++ b/MaxisGetIt/res/layout/activity_view_deal_map.xml
@@ -50,7 +50,7 @@
             android:paddingRight="10dp"
             android:paddingTop="5dp"
             android:text="@string/route"
-            android:textColor="@color/text_color_green"
+            android:textColor="@color/text_color_map_route_green"
             android:textSize="@dimen/sp_17" />
     </LinearLayout>
 
