--- a/trunk/MaxisGetIt/res/layout/activity_company_detail.xml
+++ b/trunk/MaxisGetIt/res/layout/activity_company_detail.xml
@@ -197,7 +197,8 @@
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="5dp"
-                android:paddingTop="5dp" >
+                android:paddingTop="5dp"
+                android:visibility="gone" >
             </LinearLayout>
             
             
