--- a/trunk/MaxisGetIt/res/layout/activity_deal_detail.xml
+++ b/trunk/MaxisGetIt/res/layout/activity_deal_detail.xml
@@ -50,7 +50,8 @@
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="5dp"
-                android:paddingTop="5dp" >
+                android:paddingTop="5dp"
+                android:visibility="gone" >
             </LinearLayout>
 
             <RelativeLayout
