--- a/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/res/layout/activity_combind_list.xml
+++ b/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/res/layout/activity_combind_list.xml
@@ -36,11 +36,13 @@
                 android:textSize="@dimen/sp_12"
                 android:textStyle="bold" />
 
-            <Spinner
+            <TextView
                 android:id="@+id/search_criteria_chooser"
                 android:layout_width="24dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="2dp"
