Changed AppVersion from 1.27 to 1.28.

--- a/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/res/layout/paid_company_list_row.xml
+++ b/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/res/layout/paid_company_list_row.xml
@@ -71,8 +71,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:textSize="@dimen/sp_12"
-                android:textStyle="bold" />
+                android:textSize="@dimen/sp_12" />
 
             <!--
                  <TextView
