--- a/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/res/layout/activity_company_detail.xml
+++ b/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/res/layout/activity_company_detail.xml
@@ -46,8 +46,7 @@
                 android:text="@string/test_string"
                 android:textColor="@color/rainbow_green"
                 android:textSize="@dimen/sp_16"
-                android:textStyle="bold" />
-            -->
+                android:textStyle="bold" />  -->
 
 
             <!-- android:background="@drawable/shape_box" -->
@@ -70,8 +69,7 @@
                     android:gravity="center_horizontal"
                     android:paddingBottom="3dp"
                     android:paddingTop="5dp"
-                    android:text="@string/map" />
-                -->
+                    android:text="@string/map" />  -->
                 <!--
                      <TextView
                     android:layout_width="0dp"
@@ -590,11 +588,10 @@
                     android:id="@+id/cd_desc_more"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginRight="10dp"
                     android:clickable="true"
-                    android:paddingBottom="5dp"
-                    android:paddingTop="5dp"
+                    android:paddingBottom="2dp"
                     android:textColor="@color/maxis_green"
                     android:textStyle="italic" />
             </LinearLayout>
@@ -701,7 +698,6 @@
                     android:gravity="center_horizontal|end"
                     android:text="@string/cd_no_review"
                     android:textColor="@color/text_light_grey"
-                    android:textStyle="italic"
                     android:visibility="visible" />
 
                 <TextView
