--- a/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/res/layout/activity_home.xml
+++ b/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/res/layout/activity_home.xml
@@ -36,13 +36,13 @@
         android:id="@+id/home_category_list"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="-20dp"
+        android:layout_marginBottom="30dp"
         android:layout_below="@id/home_vertical_seprator"
         android:cacheColorHint="@android:color/transparent"
         android:divider="@null"
         android:visibility="visible" />
     
-    <Button
+   <!--  <Button
         android:id="@+id/btn_photo_contest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="normal" >
-    </Button>
+    </Button> -->
 
     <include
         android:id="@+id/footer_base_screen"
