--- a/MaxisGetIt/res/layout/activity_company_detail.xml
+++ b/MaxisGetIt/res/layout/activity_company_detail.xml
@@ -32,7 +32,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="5dp"
-                android:src="@drawable/cat_thumb" />               <TextView
+                android:src="@drawable/cat_thumb" />               
+                <TextView
                 android:id="@+id/cd_comp_title"
                 android:layout_width="295dp"
                 android:layout_height="wrap_content"
@@ -45,8 +46,9 @@
                 android:text="@string/test_string"
                 android:textColor="@color/rainbow_green"
                 android:textSize="@dimen/sp_16"
-                android:textStyle="bold" />
-            -->
+                android:textStyle="bold" />  -->
+
+
             <!-- android:background="@drawable/shape_box" -->
 
             <LinearLayout
@@ -67,13 +69,12 @@
                     android:gravity="center_horizontal"
                     android:paddingBottom="3dp"
                     android:paddingTop="5dp"
-                    android:text="@string/map" />
-                -->
+                    android:text="@string/map" />  -->
                 <!--
                      <TextView
                     android:layout_width="0dp"
                     android:layout_height="1dp"
-                    android:layout_weight=".04" />
+                    android:layout_weight=".04" />
                 -->
 
                 <ImageView
@@ -120,7 +121,7 @@
                      <TextView
                     android:layout_width="0dp"
                     android:layout_height="1dp"
-                    android:layout_weight=".04" />
+                    android:layout_weight=".04" />
                 -->
                 <!--
                      <TextView
@@ -135,13 +136,13 @@
                     android:gravity="center_horizontal"
                     android:paddingBottom="3dp"
                     android:paddingTop="5dp"
-                    android:text="@string/sms" />
+                    android:text="@string/sms" />
                 -->
                 <!--
                       <TextView
                     android:layout_width="0dp"
                     android:layout_height="1dp"
-                    android:layout_weight=".04" />
+                    android:layout_weight=".04" />
                 -->
                 <!--
                      <TextView
@@ -156,11 +157,12 @@
                     android:gravity="center_horizontal"
                     android:paddingBottom="3dp"
                     android:paddingTop="5dp"
-                    android:text="@string/sms" />
+                    android:text="@string/sms" />
                 -->
             </LinearLayout>
 
-            <!-- <ImageView
+            <!--
+                 <ImageView
                 android:id="@+id/cd_comp_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -171,7 +173,9 @@
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
                 android:paddingTop="4dp"
-                android:src="@drawable/detail_cross" /> -->
+                android:src="@drawable/detail_cross" />
+            -->
+
             <android.support.v4.view.ViewPager
                 android:id="@+id/comp_image_pager"
                 android:layout_width="match_parent"
@@ -200,10 +204,7 @@
                 android:paddingTop="5dp"
                 android:visibility="gone" >
             </LinearLayout>
-            
-            
-            
-            
+
             <!-- android:background="@drawable/shape_flat_box" -->
 
             <RelativeLayout
@@ -225,7 +226,7 @@
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
                     android:clickable="true"
-                    android:src="@drawable/add_contact" />
+                    android:src="@drawable/add_contact" />
                 -->
                 <!--
                      <ImageView
@@ -238,7 +239,7 @@
                     android:layout_marginRight="7dp"
                     android:layout_marginTop="3dp"
                     android:layout_toLeftOf="@+id/img_add_profile"
-                    android:background="@color/pink" />
+                    android:background="@color/pink" />
                 -->
 
                 <LinearLayout
@@ -330,7 +331,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|right"
                         android:layout_weight="0.3"
-                        android:textSize="@dimen/sp_12" />
+                        android:textSize="@dimen/sp_12" />
                     -->
                 </LinearLayout>
             </RelativeLayout>
@@ -587,11 +588,10 @@
                     android:id="@+id/cd_desc_more"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginRight="10dp"
                     android:clickable="true"
-                    android:paddingBottom="5dp"
-                    android:paddingTop="5dp"
+                    android:paddingBottom="2dp"
                     android:textColor="@color/maxis_green"
                     android:textStyle="italic" />
             </LinearLayout>
@@ -621,7 +621,7 @@
                     android:layout_weight=".65"
                     android:padding="5dp"
                     android:textColor="@color/text_light_grey"
-                    android:textSize="@dimen/sp_13" />           </LinearLayout>
+                    android:textSize="@dimen/sp_13" />           </LinearLayout>
             -->
 
             <ImageView
@@ -685,7 +685,8 @@
                 android:divider="@drawable/single_line_seprator"
                 android:fadingEdge="none"
                 android:listSelector="@drawable/selector_home_list_item_bg"
-                android:orientation="vertical" >
+                android:orientation="horizontal"
+                android:weightSum="100" >
 
                 <TextView
                     android:id="@+id/cd_txt_no_review"
@@ -693,11 +694,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:gravity="center_horizontal"
+                    android:layout_weight="50"
+                    android:gravity="center_horizontal|end"
                     android:text="@string/cd_no_review"
                     android:textColor="@color/text_light_grey"
-                    android:textStyle="italic"
                     android:visibility="visible" />
 
                 <TextView
@@ -705,9 +705,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:gravity="center_horizontal"
+                    android:layout_weight="50"
+                    android:gravity="center_horizontal|start"
+                    android:paddingLeft="2dp"
                     android:text="@string/cd_write_review"
                     android:textColor="@color/hyperlink_blue"
                     android:visibility="visible" />
@@ -731,20 +732,59 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/cd_view_more"
-                android:textSize="@dimen/sp_12" />
+                android:textSize="@dimen/sp_12"
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/cd_end_separator"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="3dp"
                 android:background="@color/bar_light_grey" />
-            <!--
-                 <ImageView
+
+            <LinearLayout
+                android:id="@+id/cd_layout_paid_comp_list"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/bar_light_grey" />
-            -->
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/cd_name_header" >
+
+                    <TextView
+                        android:id="@+id/cd_txv_paid_comp_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:paddingBottom="5dp"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="5dp"
+                        android:singleLine="true"
+                        android:text="@string/cd_you_may_also_browse"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_12"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+
+                <com.kelltontech.maxisgetit.ui.widgets.ExpandableListView
+                    android:id="@+id/cd_paid_company_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@drawable/company_list_seprator"
+                    android:fadingEdge="none"
+                    android:gravity="center_vertical"
+                    android:numColumns="2"
+                    android:padding="0px"
+                    android:scrollbars="none" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/bar_light_grey" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/social_media_layout"
